--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,8 @@
 	<classpathentry kind="var" path="USERLIBS_DIR/LightDrive.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Robotics/wpilib/user/java/lib/navx_frc.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Robotics/wpilib/user/java/lib/MatchData-2018.01.07.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/mindsensors-javadoc.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/mindsensors.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/navx_frc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
